Update message content with personal story and Bengali translation

--- a/index.html
+++ b/index.html
@@ -456,22 +456,17 @@
 
             <div class="message-section">
                 <div class="bengali-message show" id="bengaliMsg">
-                    আমার প্রিয় সুমিতা,<br><br>
-                    তুমি আমার জীবনের সবচেয়ে সুন্দর উপহার।<br>
-                    তোমার হাসি, তোমার চোখ, তোমার উপস্থিতি<br>
-                    আমার প্রতিটি দিনকে বিশেষ করে তোলে।<br><br>
-                    আমি তোমাকে এত ভালোবাসি যে<br>
-                    শব্দ দিয়ে তা প্রকাশ করা যায় না।<br>
-                    তুমি আমার হৃদয়ের অংশ, আমার আত্মার সাথী।<br><br>
-                    আমাদের প্রতিটি মুহূর্ত অমূল্য এবং<br>
-                    সেই ভালোবাসা চিরকাল থাকবে। 🌹
+                    হ্যালো সোনা ❤️<br><br>
+                    আমি এখনও বিশ্বাস করতে পারি না যে Aisle-এ একটি সাধারণ সোয়াইপ এই সুন্দর যাত্রায় পরিণত হয়েছে। তোমার সাথে প্রতিটি দিন বিশেষ লাগে — তোমার হাসি, তোমার ভালোবাসা, এবং যেভাবে তুমি সাধারণ মুহূর্তগুলোকে জাদুকরী করে তুলি। আমি অবিশ্বাস্যভাবে ভাগ্যবান যে তুমি আমার জীবনে আছ।<br><br>
+                    আমাদের র‍্যান্ডম রাত জাগা কথাবার্তা থেকে শুরু করে আমাদের অবিস্মরণীয় জয়পুর ট্রিপ পর্যন্ত — সেই রঙিন রাস্তায় হাঁটা, ছোট জিনিসগুলো নিয়ে হাসি, এবং চিরস্থায়ী স্মৃতি তৈরি করা — সবকিছু আরও অর্থবহ হয়ে ওঠে কারণ এটি তোমার সাথে।<br><br>
+                    ভ্যালেন্টাইন ডের শুভেচ্ছা, আমার প্রিয়। তোমার অসাধারণ, সুন্দর এবং অনন্য হওয়ার জন্য ধন্যবাদ। আরও অনেক ট্রিপ, অগণিত স্মৃতি এবং একটি ভবিষ্যত যা তোমার সাথে প্রতিদিন আরও সুন্দর হচ্ছে। 🌹
                 </div>
 
                 <div class="english-message" id="englishMsg">
-                    My Dearest Sumita,<br><br>
-                    You are the most beautiful gift in my life. Your smile, your eyes, and your presence make every day incredible.<br><br>
-                    I love you more than words can express. You are my heart, my soul, my forever.<br><br>
-                    Every moment with you is precious, and my love for you will last forever. 🌹
+                    Hello Kiddo ❤️<br><br>
+                    I still can't believe that one simple right swipe on Aisle turned into this beautiful journey with you. Every day with you feels special — your smile, your kindness, and the way you make even ordinary moments magical. I feel incredibly lucky to have you in my life.<br><br>
+                    From our random late-night talks to our unforgettable Jaipur trip — walking through those colorful streets, laughing over little things, and making memories I'll always hold close — everything feels more meaningful because it's with you.<br><br>
+                    Happy Valentine's Day, my love. Thank you for being so amazing, so beautiful, and so wonderfully <i>you</i>. Here's to many more trips, countless memories, and a forever that keeps getting better with you. 🌹
                 </div>
             </div>
 
